crates/vvv/tests/corpus/snapshots/ts-symbol-moves__move-ambient-refused__human.snap
---
source: crates/vvv/tests/corpus.rs
expression: "corpus.run(args, false)"
---
exit 1
--- stdout ---
--- stderr ---
✗ selected declaration cannot be moved: this declaration form cannot be moved independently
