crates/vvv/tests/corpus/snapshots/ts-symbol-moves__move-ambient-refused__json.snap
---
source: crates/vvv/tests/corpus.rs
expression: "self.run(args, true)"
---
exit 1
--- stdout ---
{
  "code": "unmovable",
  "message": "selected declaration cannot be moved: this declaration form cannot be moved independently",
  "schema": 1,
  "status": "error",
  "symbol_move_unsupported": "unsupported_declaration_kind"
}
--- stderr ---
